[gd_scene load_steps=49 format=3 uid="uid://cd58qeukktc1j"]

[ext_resource type="Script" path="res://entities/enemy/enemy.gd" id="1_k45ff"]
[ext_resource type="Texture2D" uid="uid://qb4m78o1yy04" path="res://assets/objects/Fire Elemental Sprite Sheet.png" id="1_sr7dh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4wqbk"]
radius = 6.0

[sub_resource type="Animation" id="Animation_4c6el"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_to5nr"]
resource_name = "attack_left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_yoox1"]
resource_name = "attack_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_8fcd8"]
resource_name = "death_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_xtwpy"]
resource_name = "death_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38]
}

[sub_resource type="Animation" id="Animation_v2si1"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_xjphf"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_ypsom"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [39, 38, 37, 36, 35, 34, 33]
}

[sub_resource type="Animation" id="Animation_trrf0"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_6dcrw"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4mwwi"]
_data = {
"RESET": SubResource("Animation_4c6el"),
"attack_left": SubResource("Animation_to5nr"),
"attack_right": SubResource("Animation_yoox1"),
"death_left": SubResource("Animation_8fcd8"),
"death_right": SubResource("Animation_xtwpy"),
"idle_left": SubResource("Animation_v2si1"),
"idle_right": SubResource("Animation_xjphf"),
"spawn": SubResource("Animation_ypsom"),
"walk_left": SubResource("Animation_trrf0"),
"walk_right": SubResource("Animation_6dcrw")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4dxdp"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xd6sq"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6p1pn"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_srqtj"]
animation = &"attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gr350"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4dxdp")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_xd6sq")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_6p1pn")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_srqtj")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_05j08"]
animation = &"death_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yyj1e"]
animation = &"death_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r43kr"]
animation = &"death_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_20j8y"]
animation = &"death_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_07ulw"]
blend_point_0/node = SubResource("AnimationNodeAnimation_05j08")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_yyj1e")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_r43kr")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_20j8y")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s1s2j"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nwcaj"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ik16k"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dd8oq"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ymewo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_s1s2j")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_nwcaj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_ik16k")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_dd8oq")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wufb3"]
animation = &"spawn"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ky7n7"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jeqts"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7gubn"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sfvqg"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_o2gmh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ky7n7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jeqts")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_7gubn")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_sfvqg")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pn08e"]
advance_mode = 2
advance_condition = &"is_attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ihek4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_44paj"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1abel"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xsvmc"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d5d8m"]
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8hslh"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vk6n2"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_if524"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dcyt7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_adwtq"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_gr350")
states/Attack/position = Vector2(532, 30)
states/Die/node = SubResource("AnimationNodeBlendSpace2D_07ulw")
states/Die/position = Vector2(678, 99)
states/End/position = Vector2(851, 99)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ymewo")
states/Idle/position = Vector2(527, 99)
states/Spawn/node = SubResource("AnimationNodeAnimation_wufb3")
states/Spawn/position = Vector2(354, 99)
states/Start/position = Vector2(200, 99)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_o2gmh")
states/Walk/position = Vector2(532, 182)
transitions = ["Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_pn08e"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_ihek4"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_44paj"), "Die", "End", SubResource("AnimationNodeStateMachineTransition_1abel"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_xsvmc"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_d5d8m"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_8hslh"), "Attack", "Die", SubResource("AnimationNodeStateMachineTransition_vk6n2"), "Start", "Spawn", SubResource("AnimationNodeStateMachineTransition_if524"), "Spawn", "Idle", SubResource("AnimationNodeStateMachineTransition_dcyt7")]

[sub_resource type="CircleShape2D" id="CircleShape2D_ktk2g"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_gcki7"]
radius = 6.08276

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_k45ff")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_sr7dh")
hframes = 8
vframes = 5
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 24)
shape = SubResource("CircleShape2D_4wqbk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4mwwi")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4mwwi")
}
tree_root = SubResource("AnimationNodeStateMachine_adwtq")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_attacking = false
parameters/conditions/is_dead = false
parameters/conditions/is_idle = false
parameters/conditions/is_walking = false
parameters/Attack/blend_position = Vector2(0, 0)
parameters/Die/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(-0.186411, 0.115044)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="WalkTimer" type="Timer" parent="."]

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, 19)
shape = SubResource("CircleShape2D_ktk2g")
debug_color = Color(0.933333, 0.156863, 0.509804, 0.419608)

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 33
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
y_sort_enabled = true
position = Vector2(-1, 24)
shape = SubResource("CircleShape2D_gcki7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
